--- a/recycle/Base.lproj/Main.storyboard
+++ b/recycle/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +11,7 @@
         <!--Profile-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" userLabel="Profile" customClass="ProfileViewController" customModule="tab10" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" userLabel="Profile" customClass="ProfileViewController" customModule="recycle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,7 +27,7 @@
         <!--Scan-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" userLabel="Scan" customClass="ScanViewController" customModule="tab10" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" userLabel="Scan" customClass="ScanViewController" customModule="recycle" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -45,7 +43,7 @@
         <!--History-->
         <scene sceneID="fw0-pC-SwN">
             <objects>
-                <viewController id="pHR-Vp-TxB" userLabel="History" customClass="HistoryViewController" customModule="tab10" sceneMemberID="viewController">
+                <viewController id="pHR-Vp-TxB" userLabel="History" customClass="HistoryViewController" customModule="recycle" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R9y-Co-SLg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,7 +59,7 @@
         <!--Map-->
         <scene sceneID="Ntm-rF-exB">
             <objects>
-                <viewController id="gbh-Wo-LXX" userLabel="Map" customClass="MapViewController" customModule="tab10" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gbh-Wo-LXX" userLabel="Map" customClass="MapViewController" customModule="recycle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="p4c-S1-fc7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,7 +75,7 @@
         <!--Wallet-->
         <scene sceneID="Kmo-iA-JNY">
             <objects>
-                <viewController id="J6x-we-4mg" userLabel="Wallet" customClass="WalletViewController" customModule="tab10" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="J6x-we-4mg" userLabel="Wallet" customClass="WalletViewController" customModule="recycle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GOt-Do-B9N">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
