--- a/recycle/Base.lproj/Main.storyboard
+++ b/recycle/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dYZ-Uy-bxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2801" y="1367"/>
+            <point key="canvasLocation" x="2798.5507246376815" y="1366.7410714285713"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
